--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Calculate word counts in a text file!"
 authors = ["Andy Zhang"]
 license = "MIT"
 readme = "README.md"
+include = ["tests/*", "CHANGELOG.md"]
 
 [tool.poetry.dependencies]
 python = ">=3.9"
