--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,14 +5,17 @@ on: [push, pull_request]
 jobs:
   ci:
     # Set up operating system
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
 
     # Define job steps
     steps:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "{{ cookiecutter.python_version }}"
+          python-version: "3.9"
 
       - name: Check-out repository
         uses: actions/checkout@v3
@@ -24,12 +27,12 @@ jobs:
         run: poetry install
 
       - name: Test with pytest
-        run: poetry run pytest tests/ --cov={{ cookiecutter.__package_slug }} --cov-report=xml
+        run: poetry run pytest tests/ --cov=pycounts_ajz --cov-report=xml
 
       - name: Use Codecov to track coverage
         uses: codecov/codecov-action@v3
         with:
-          files: ./coverage.xml # coverage report
+          files: ./coverage.xml   # coverage report
 
       - name: Build documentation
         run: poetry run make html --directory docs/
