--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,7 @@ sphinx-rtd-theme = "^2.0.0"
 
 
 [tool.semantic_release]
-version_toml = [
-    "pyproject.toml:tool.poetry.version",
-]                                                    # version location
+version_toml = ["pyproject.toml:tool.poetry.version",]                                                    # version location
 branch = "main"                                      # branch to make releases of
 changelog_file = "CHANGELOG.md"                      # changelog file
 build_command = "pip install poetry && poetry build" # build dists
